crates/codegen/tests/snapshots/ir__a_unit_function_returns_void.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn log(n: int):\\n    if n < 0:\\n        return\\n    print(n)\\n\\nfn main():\\n    log(1)\\n    log(-1)\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.


; fn log(n: int) -> None
define internal void @ty_user_log(i64 %n.arg) nounwind {
entry:
  %n.addr = alloca i64, align 8
  store i64 %n.arg, ptr %n.addr, align 8
  %t1 = load i64, ptr %n.addr, align 8
  %t2 = icmp slt i64 %t1, 0
  br i1 %t2, label %if.then.1, label %if.end.3

if.then.1:
  ret void

if.end.3:
  %t3 = load i64, ptr %n.addr, align 8
  call void @ty_print_int(i64 %t3)
  call void @ty_print_end()
  ret void
}

; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  call void @ty_user_log(i64 1)
  call void @ty_user_log(i64 -1)
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare void @ty_print_end() nounwind
declare void @ty_print_int(i64) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
