crates/codegen/tests/snapshots/ir__bitwise_operations_and_shifts.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn main():\\n    n = 5\\n    k = 2\\n    print(n & 3, n | 8, n ^ 1, ~n)\\n    print(n << 2, n >> 1)\\n    print(n << k)\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.

@panic.0 = private unnamed_addr constant [21 x i8] c"negative shift amount", align 1


; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %n.addr = alloca i64, align 8
  %k.addr = alloca i64, align 8
  store i64 5, ptr %n.addr, align 8
  store i64 2, ptr %k.addr, align 8
  %t1 = load i64, ptr %n.addr, align 8
  %t2 = and i64 %t1, 3
  %t3 = load i64, ptr %n.addr, align 8
  %t4 = or i64 %t3, 8
  %t5 = load i64, ptr %n.addr, align 8
  %t6 = xor i64 %t5, 1
  %t7 = load i64, ptr %n.addr, align 8
  %t8 = xor i64 %t7, -1
  call void @ty_print_int(i64 %t2)
  call void @ty_print_sep()
  call void @ty_print_int(i64 %t4)
  call void @ty_print_sep()
  call void @ty_print_int(i64 %t6)
  call void @ty_print_sep()
  call void @ty_print_int(i64 %t8)
  call void @ty_print_end()
  %t9 = load i64, ptr %n.addr, align 8
  %t10 = shl i64 %t9, 2
  %t11 = load i64, ptr %n.addr, align 8
  %t12 = ashr i64 %t11, 1
  call void @ty_print_int(i64 %t10)
  call void @ty_print_sep()
  call void @ty_print_int(i64 %t12)
  call void @ty_print_end()
  %t13 = load i64, ptr %n.addr, align 8
  %t14 = load i64, ptr %k.addr, align 8
  %t15 = icmp slt i64 %t14, 0
  br i1 %t15, label %panic.1, label %cont.2

panic.1:
  call void @ty_panic(ptr @panic.0, i64 21)
  unreachable

cont.2:
  %t16 = icmp sgt i64 %t14, 63
  %t17 = and i64 %t14, 63
  %t18 = shl i64 %t13, %t17
  %t19 = select i1 %t16, i64 0, i64 %t18
  call void @ty_print_int(i64 %t19)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare void @ty_panic(ptr, i64) noreturn nounwind
declare void @ty_print_end() nounwind
declare void @ty_print_int(i64) nounwind
declare void @ty_print_sep() nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
