crates/codegen/tests/snapshots/ir__builtins_lower_to_intrinsics.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn main():\\n    n = -3\\n    x = -1.5\\n    print(abs(n), abs(x))\\n    print(min(1, 2), max(1.0, 2.0))\\n    print(float(n), int(x))\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.


; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %n.addr = alloca i64, align 8
  %x.addr = alloca double, align 8
  store i64 -3, ptr %n.addr, align 8
  store double -1.5, ptr %x.addr, align 8
  %t1 = load i64, ptr %n.addr, align 8
  %t2 = call i64 @llvm.abs.i64(i64 %t1, i1 false)
  %t3 = load double, ptr %x.addr, align 8
  %t4 = call double @llvm.fabs.f64(double %t3)
  call void @ty_print_int(i64 %t2)
  call void @ty_print_sep()
  call void @ty_print_float(double %t4)
  call void @ty_print_end()
  %t5 = icmp slt i64 2, 1
  %t6 = select i1 %t5, i64 2, i64 1
  %t7 = fcmp ogt double 2.0, 1.0
  %t8 = select i1 %t7, double 2.0, double 1.0
  call void @ty_print_int(i64 %t6)
  call void @ty_print_sep()
  call void @ty_print_float(double %t8)
  call void @ty_print_end()
  %t9 = load i64, ptr %n.addr, align 8
  %t10 = sitofp i64 %t9 to double
  %t11 = load double, ptr %x.addr, align 8
  %t12 = call i64 @llvm.fptosi.sat.i64.f64(double %t11)
  call void @ty_print_float(double %t10)
  call void @ty_print_sep()
  call void @ty_print_int(i64 %t12)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare double @llvm.fabs.f64(double)
declare i64 @llvm.abs.i64(i64, i1)
declare i64 @llvm.fptosi.sat.i64.f64(double)
declare void @ty_print_end() nounwind
declare void @ty_print_float(double) nounwind
declare void @ty_print_int(i64) nounwind
declare void @ty_print_sep() nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
