crates/codegen/tests/snapshots/ir__constants_are_folded.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"LIMIT: int = 2 * 5\\nNAME: str = \\\"ty\\\" + \\\"phoon\\\"\\n\\nfn main():\\n    for i in range(LIMIT):\\n        print(i)\\n    print(NAME)\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.

@str.0 = private unnamed_addr constant { i64, i64, [7 x i8] } { i64 7, i64 7, [7 x i8] c"typhoon" }, align 8


; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %i.addr = alloca i64, align 8
  %for.iv.1 = alloca i64, align 8
  store i64 0, ptr %for.iv.1, align 8
  br label %for.cond.2

for.cond.2:
  %t1 = load i64, ptr %for.iv.1, align 8
  %t2 = icmp slt i64 %t1, 10
  br i1 %t2, label %for.body.3, label %for.end.5

for.body.3:
  store i64 %t1, ptr %i.addr, align 8
  %t3 = load i64, ptr %i.addr, align 8
  call void @ty_print_int(i64 %t3)
  call void @ty_print_end()
  br label %for.step.4

for.step.4:
  %t4 = load i64, ptr %for.iv.1, align 8
  %t5 = add i64 %t4, 1
  store i64 %t5, ptr %for.iv.1, align 8
  br label %for.cond.2

for.end.5:
  %t6 = load i64, ptr @str.0, align 8, !tbaa !8, !invariant.load !9
  %t7 = getelementptr inbounds i8, ptr @str.0, i64 16
  call void @ty_print_str(ptr %t7, i64 %t6)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare void @ty_print_end() nounwind
declare void @ty_print_int(i64) nounwind
declare void @ty_print_str(ptr, i64) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()

; -- type-based alias analysis -----------------------------------
!0 = !{!"typhoon"}
!1 = !{!"list.header", !0}
!2 = !{!"list.data", !0}
!3 = !{!"class.field", !0}
!4 = !{!"str.header", !0}
!5 = !{!1, !1, i64 0}
!6 = !{!2, !2, i64 0}
!7 = !{!3, !3, i64 0}
!8 = !{!4, !4, i64 0}
!9 = !{}
