crates/codegen/tests/snapshots/ir__f_strings_build_a_string.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn main():\\n    n = 2\\n    x = 1.5\\n    print(f\\\"n={n} x={x:.2f} {{literal}}\\\")\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.

@str.0 = private unnamed_addr constant { i64, i64, [2 x i8] } { i64 2, i64 2, [2 x i8] c"n=" }, align 8
@str.1 = private unnamed_addr constant { i64, i64, [3 x i8] } { i64 3, i64 3, [3 x i8] c" x=" }, align 8
@str.2 = private unnamed_addr constant { i64, i64, [10 x i8] } { i64 10, i64 10, [10 x i8] c" {literal}" }, align 8


; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %n.addr = alloca i64, align 8
  %x.addr = alloca double, align 8
  store i64 2, ptr %n.addr, align 8
  store double 1.5, ptr %x.addr, align 8
  %t1 = load i64, ptr %n.addr, align 8
  %t2 = call ptr @ty_str_from_int(i64 %t1)
  %t3 = call ptr @ty_str_concat(ptr @str.0, ptr %t2)
  %t4 = call ptr @ty_str_concat(ptr %t3, ptr @str.1)
  %t5 = load double, ptr %x.addr, align 8
  %t6 = call ptr @ty_str_from_float_fixed(double %t5, i64 2)
  %t7 = call ptr @ty_str_concat(ptr %t4, ptr %t6)
  %t8 = call ptr @ty_str_concat(ptr %t7, ptr @str.2)
  %t9 = load i64, ptr %t8, align 8, !tbaa !8, !invariant.load !9
  %t10 = getelementptr inbounds i8, ptr %t8, i64 16
  call void @ty_print_str(ptr %t10, i64 %t9)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare noalias ptr @ty_str_concat(ptr nocapture readonly, ptr nocapture readonly) nounwind
declare noalias ptr @ty_str_from_float_fixed(double, i64) nounwind
declare noalias ptr @ty_str_from_int(i64) nounwind
declare void @ty_print_end() nounwind
declare void @ty_print_str(ptr, i64) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()

; -- type-based alias analysis -----------------------------------
!0 = !{!"typhoon"}
!1 = !{!"list.header", !0}
!2 = !{!"list.data", !0}
!3 = !{!"class.field", !0}
!4 = !{!"str.header", !0}
!5 = !{!1, !1, i64 0}
!6 = !{!2, !2, i64 0}
!7 = !{!3, !3, i64 0}
!8 = !{!4, !4, i64 0}
!9 = !{}
