crates/codegen/tests/snapshots/ir__float_arithmetic_is_contracted.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn main():\\n    a = 1.5\\n    b = 2.5\\n    print(a * b + a)\\n    print(a - b)\\n    print(a / b)\\n    print(float(a) * b + a)\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.


; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %a.addr = alloca double, align 8
  %b.addr = alloca double, align 8
  store double 1.5, ptr %a.addr, align 8
  store double 2.5, ptr %b.addr, align 8
  %t1 = load double, ptr %a.addr, align 8
  %t2 = load double, ptr %b.addr, align 8
  %t3 = fmul contract double %t1, %t2
  %t4 = load double, ptr %a.addr, align 8
  %t5 = fadd contract double %t3, %t4
  call void @ty_print_float(double %t5)
  call void @ty_print_end()
  %t6 = load double, ptr %a.addr, align 8
  %t7 = load double, ptr %b.addr, align 8
  %t8 = fsub contract double %t6, %t7
  call void @ty_print_float(double %t8)
  call void @ty_print_end()
  %t9 = load double, ptr %a.addr, align 8
  %t10 = load double, ptr %b.addr, align 8
  %t11 = fdiv double %t9, %t10
  call void @ty_print_float(double %t11)
  call void @ty_print_end()
  %t12 = load double, ptr %a.addr, align 8
  %t13 = call double @llvm.arithmetic.fence.f64(double %t12)
  %t14 = load double, ptr %b.addr, align 8
  %t15 = fmul contract double %t13, %t14
  %t16 = load double, ptr %a.addr, align 8
  %t17 = fadd contract double %t15, %t16
  call void @ty_print_float(double %t17)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare double @llvm.arithmetic.fence.f64(double)
declare void @ty_print_end() nounwind
declare void @ty_print_float(double) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
