crates/codegen/tests/snapshots/ir__float_floor_division_and_modulo.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn main():\\n    a = 7.0\\n    b = 2.0\\n    print(a // b)\\n    print(a % b)\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.


; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %a.addr = alloca double, align 8
  %b.addr = alloca double, align 8
  store double 7.0, ptr %a.addr, align 8
  store double 2.0, ptr %b.addr, align 8
  %t1 = load double, ptr %a.addr, align 8
  %t2 = load double, ptr %b.addr, align 8
  %t3 = fdiv double %t1, %t2
  %t4 = call double @llvm.floor.f64(double %t3)
  call void @ty_print_float(double %t4)
  call void @ty_print_end()
  %t5 = load double, ptr %a.addr, align 8
  %t6 = load double, ptr %b.addr, align 8
  %t7 = fdiv double %t5, %t6
  %t8 = call double @llvm.floor.f64(double %t7)
  %t9 = fmul double %t6, %t8
  %t10 = fsub double %t5, %t9
  %t11 = fcmp oeq double %t10, 0.0
  %t12 = call double @llvm.copysign.f64(double 0.0, double %t6)
  %t13 = select i1 %t11, double %t12, double %t10
  call void @ty_print_float(double %t13)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare double @llvm.copysign.f64(double, double)
declare double @llvm.floor.f64(double)
declare void @ty_print_end() nounwind
declare void @ty_print_float(double) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
