crates/codegen/tests/snapshots/ir__for_range_is_a_counting_loop.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn main():\\n    total = 0\\n    for i in range(10):\\n        total = total + i\\n    for j in range(10, 0, -2):\\n        total = total + j\\n    print(total)\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.


; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %total.addr = alloca i64, align 8
  %i.addr = alloca i64, align 8
  %j.addr = alloca i64, align 8
  %for.iv.1 = alloca i64, align 8
  %for.iv.6 = alloca i64, align 8
  store i64 0, ptr %total.addr, align 8
  store i64 0, ptr %for.iv.1, align 8
  br label %for.cond.2

for.cond.2:
  %t1 = load i64, ptr %for.iv.1, align 8
  %t2 = icmp slt i64 %t1, 10
  br i1 %t2, label %for.body.3, label %for.end.5

for.body.3:
  store i64 %t1, ptr %i.addr, align 8
  %t3 = load i64, ptr %total.addr, align 8
  %t4 = load i64, ptr %i.addr, align 8
  %t5 = add i64 %t3, %t4
  store i64 %t5, ptr %total.addr, align 8
  br label %for.step.4

for.step.4:
  %t6 = load i64, ptr %for.iv.1, align 8
  %t7 = add i64 %t6, 1
  store i64 %t7, ptr %for.iv.1, align 8
  br label %for.cond.2

for.end.5:
  store i64 10, ptr %for.iv.6, align 8
  br label %for.cond.7

for.cond.7:
  %t8 = load i64, ptr %for.iv.6, align 8
  %t9 = icmp sgt i64 %t8, 0
  br i1 %t9, label %for.body.8, label %for.end.10

for.body.8:
  store i64 %t8, ptr %j.addr, align 8
  %t10 = load i64, ptr %total.addr, align 8
  %t11 = load i64, ptr %j.addr, align 8
  %t12 = add i64 %t10, %t11
  store i64 %t12, ptr %total.addr, align 8
  br label %for.step.9

for.step.9:
  %t13 = load i64, ptr %for.iv.6, align 8
  %t14 = add i64 %t13, -2
  store i64 %t14, ptr %for.iv.6, align 8
  br label %for.cond.7

for.end.10:
  %t15 = load i64, ptr %total.addr, align 8
  call void @ty_print_int(i64 %t15)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare void @ty_print_end() nounwind
declare void @ty_print_int(i64) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
