crates/codegen/tests/snapshots/ir__hello_and_the_entry_point.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn main():\\n    print(\\\"Hello, Typhoon!\\\")\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.

@str.0 = private unnamed_addr constant { i64, [15 x i8] } { i64 15, [15 x i8] c"Hello, Typhoon!" }, align 8


; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %t1 = load i64, ptr @str.0, align 8
  %t2 = getelementptr inbounds i8, ptr @str.0, i64 8
  call void @ty_print_str(ptr %t2, i64 %t1)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare void @ty_print_end() nounwind
declare void @ty_print_str(ptr, i64) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
