crates/codegen/tests/snapshots/ir__integer_floor_division_and_modulo.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn divide(a: int, b: int) -> int:\\n    return a // b\\n\\nfn main():\\n    print(divide(-7, 2))\\n    print(-7 % 2)\\n    print(7 / 2)\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.

@panic.0 = private unnamed_addr constant [24 x i8] c"integer division by zero", align 1


; fn divide(a: int, b: int) -> int
define internal i64 @ty_user_divide(i64 %a.arg, i64 %b.arg) nounwind {
entry:
  %a.addr = alloca i64, align 8
  %b.addr = alloca i64, align 8
  store i64 %a.arg, ptr %a.addr, align 8
  store i64 %b.arg, ptr %b.addr, align 8
  %t1 = load i64, ptr %a.addr, align 8
  %t2 = load i64, ptr %b.addr, align 8
  %t3 = icmp eq i64 %t2, 0
  br i1 %t3, label %panic.1, label %cont.2

panic.1:
  call void @ty_panic(ptr @panic.0, i64 24)
  unreachable

cont.2:
  %t4 = icmp eq i64 %t1, -9223372036854775808
  %t5 = icmp eq i64 %t2, -1
  %t6 = and i1 %t4, %t5
  %t7 = select i1 %t6, i64 1, i64 %t2
  %t8 = srem i64 %t1, %t7
  %t9 = icmp ne i64 %t8, 0
  %t10 = icmp slt i64 %t8, 0
  %t11 = icmp slt i64 %t2, 0
  %t12 = xor i1 %t10, %t11
  %t13 = and i1 %t9, %t12
  %t14 = sdiv i64 %t1, %t7
  %t15 = sub i64 %t14, 1
  %t16 = select i1 %t13, i64 %t15, i64 %t14
  ret i64 %t16
}

; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %t1 = call i64 @ty_user_divide(i64 -7, i64 2)
  call void @ty_print_int(i64 %t1)
  call void @ty_print_end()
  %t2 = srem i64 -7, 2
  %t3 = icmp ne i64 %t2, 0
  %t4 = icmp slt i64 %t2, 0
  %t5 = icmp slt i64 2, 0
  %t6 = xor i1 %t4, %t5
  %t7 = and i1 %t3, %t6
  %t8 = add i64 %t2, 2
  %t9 = select i1 %t7, i64 %t8, i64 %t2
  call void @ty_print_int(i64 %t9)
  call void @ty_print_end()
  %t10 = sitofp i64 7 to double
  %t11 = sitofp i64 2 to double
  %t12 = fdiv double %t10, %t11
  call void @ty_print_float(double %t12)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare void @ty_panic(ptr, i64) noreturn nounwind
declare void @ty_print_end() nounwind
declare void @ty_print_float(double) nounwind
declare void @ty_print_int(i64) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
