crates/codegen/tests/snapshots/ir__keyword_arguments_and_defaults.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn scale(x: float, factor: float = 2.0) -> float:\\n    return x * factor\\n\\nfn main():\\n    print(scale(1.0))\\n    print(scale(factor=3.0, x=1.0))\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.


; fn scale(x: float, factor: float) -> float
define internal double @ty_user_scale(double %x.arg, double %factor.arg) nounwind {
entry:
  %x.addr = alloca double, align 8
  %factor.addr = alloca double, align 8
  store double %x.arg, ptr %x.addr, align 8
  store double %factor.arg, ptr %factor.addr, align 8
  %t1 = load double, ptr %x.addr, align 8
  %t2 = load double, ptr %factor.addr, align 8
  %t3 = fmul contract double %t1, %t2
  ret double %t3
}

; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %t1 = call double @ty_user_scale(double 1.0, double 2.0)
  call void @ty_print_float(double %t1)
  call void @ty_print_end()
  %t2 = call double @ty_user_scale(double 1.0, double 3.0)
  call void @ty_print_float(double %t2)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare void @ty_print_end() nounwind
declare void @ty_print_float(double) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
