crates/codegen/tests/snapshots/ir__powers_use_sqrt_multiply_and_the_runtime.snap
---
source: crates/codegen/tests/ir.rs
expression: "ir(\"fn main():\\n    x = 2.0\\n    n = 3\\n    print(x ** 0.5)\\n    print(x ** 2.0)\\n    print(x ** 3.0)\\n    print(n ** 2)\\n    print(n ** n)\\n\")"
---
; Generated by the typhoon compiler (DESIGN.md section 6.2).
; LLVM 18+ textual IR, opaque pointers.


; fn main() -> None
define internal void @ty_user_main() nounwind {
entry:
  %x.addr = alloca double, align 8
  %n.addr = alloca i64, align 8
  store double 2.0, ptr %x.addr, align 8
  store i64 3, ptr %n.addr, align 8
  %t1 = load double, ptr %x.addr, align 8
  %t2 = call double @llvm.sqrt.f64(double %t1)
  call void @ty_print_float(double %t2)
  call void @ty_print_end()
  %t3 = load double, ptr %x.addr, align 8
  %t4 = fmul contract double %t3, %t3
  call void @ty_print_float(double %t4)
  call void @ty_print_end()
  %t5 = load double, ptr %x.addr, align 8
  %t6 = call double @llvm.pow.f64(double %t5, double 3.0)
  call void @ty_print_float(double %t6)
  call void @ty_print_end()
  %t7 = load i64, ptr %n.addr, align 8
  %t8 = mul i64 %t7, %t7
  call void @ty_print_int(i64 %t8)
  call void @ty_print_end()
  %t9 = load i64, ptr %n.addr, align 8
  %t10 = load i64, ptr %n.addr, align 8
  %t11 = call i64 @ty_int_pow(i64 %t9, i64 %t10)
  call void @ty_print_int(i64 %t11)
  call void @ty_print_end()
  ret void
}

; the process entry point
define i32 @main() nounwind {
entry:
  call void @ty_rt_init()
  call void @ty_user_main()
  call void @ty_rt_exit(i32 0)
  unreachable
}

; -- runtime and intrinsics ---------------------------------------
declare double @llvm.pow.f64(double, double)
declare double @llvm.sqrt.f64(double)
declare i64 @ty_int_pow(i64, i64) nounwind
declare void @ty_print_end() nounwind
declare void @ty_print_float(double) nounwind
declare void @ty_print_int(i64) nounwind
declare void @ty_rt_exit(i32) noreturn nounwind
declare void @ty_rt_init()
